change order of elements for small screens to avoid map jumps back and forth when clicking different signs but scroll down to sign if not in viewport

--- a/example/website.css
+++ b/example/website.css
@@ -14,12 +14,7 @@ box-sizing: border-box;
 h1, h3, p {margin-top: 0px;
 }
 
-div#header {
-position: absolute;
-display: block;
-width: 20em;
-z-index: 1;
-}
+div#header { order: 1; }
 
 div#header h1 {
 display: inline-block;
@@ -34,16 +29,14 @@ background: #f2f5f7;
 border: 1px solid white;
 }
 
-div.config {
-display: block;
+div.config { 
+order: 2;
 width: 18em;
-float: left;
 background: #f7f5f2;
 border: 1px solid #aaa;
 margin: 1em;
 padding: 1em;
-z-index: 10;
-}
+z-index: 10; }
 
 div.config form div {
 display : inline-block;
@@ -53,10 +46,12 @@ display: flex;
 flex-direction: column; 
 width: 100%;
 position: relative;
+width: 20em;
+z-index: 1;
 }
-div#tagsHeader { order: 1; }
-div#tagsDestination { order: 2; }
-div#tagsOther { order: 3; }
+div#tagsHeader { order: 3; }
+div#tagsDestination { order: 4; }
+div#tagsOther { order: 5; }
 
 div#tagsOther, div#tagsDestination {
 display: block;
@@ -93,11 +88,17 @@ background: #eee;
 z-index: 0;
 }
 
+.showhide {
+}
+
 /* Responsive Design */
 @media (max-width: 50em) {
+div#tagSection { width: 100%; }
+
 div#header {
 position: relative; /* Ändern Sie die Position, um es unter dem Header zu platzieren */
 width: 100%; /* Vollständige Breite auf kleinen Bildschirmen */
+order: 1; 
 }
 
 .simplepage #map,
@@ -109,11 +110,8 @@ width: 90%; /* Vollständige Breite auf kleinen Bildschirmen */
 margin-top: 1em; /* Abstand zum Header */
 left: 1em;
 height:30em;
-}
-
-div.config {
-width: 90%;
-float: none;
+max-height: 80vh;
+order: 3; 
 }
 
 
@@ -123,7 +121,11 @@ position: relative;
 z-index: 0;
 left: 0;
 width: 90%;
+order: 4; 
 }
+div#tagsHeader { order: 5; }
+div#tagsDestination { order: 6; }
+div#tagsOther { order: 7; }
 
 div#tagsOther, div#tagsDestination {
 display: block;
@@ -133,10 +135,9 @@ column-count: 2;
 column-gap: 1em;
 word-wrap: break-word;
   }
-div#tagsDestination { 
-order: 3; 
-}
-div#tagsOther { 
+
+div.config {
+width: 90%;
 order: 2; 
 }
 }
